# llm-client

./: .gitignore  README.md  example.py  pyproject.toml
llm_client/: __init__.py  config.py  handler.py  types.py
llm_client/clients/: __init__.py  base_client.py  openai_client.py
llm_client/handlers/: __init__.py  batch_handler.py  chat_handler.py  embedding_handler.py  stream_handler.py  tool_handler.py
llm_client/parsers/: __init__.py  json_parser.py  stream_parser.py
